Move from Hive Jive to Technically Beekeeping

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,7 +47,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading">Hive Jive</div>
+                <div class="intro-heading">Bee Disruptive</div>
                 <div class="intro-lead-in">Bee Innovation to Thrive</div>
                 <a href="#about" class="page-scroll btn btn-xl">Our Mission</a>
             </div>
