--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,16 +13,8 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-calendar-check-o fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Bee Connected - Bee Club</h4>
-                    <p class="text-muted">Coming soon...We will make it easy to create and join bee clubs for the beekeeping community!</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-fire-extinguisher fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Bee Connected - Bee Catcher</h4>
-                    <p class="text-muted">Coming next...Connecting beekeepers with individuals with bee problems.</p>
+                    <h4 class="service-heading">Bee Club</h4>
+                    <p class="text-muted">Join a bee community, change our world's nature!</p>
                 </div>
             </div>
         </div>
