--- a/_includes/products.html
+++ b/_includes/products.html
@@ -11,11 +11,36 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-spoon fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Jar Bee Feeder</h4>
+                    <p class="text-muted">Coming soon...Patent Pending 📃</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-cutlery fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Flow Hive Compatable Bee Feeder</h4>
-                    <p class="text-muted">Coming soon...TODO</p>
+                    <h4 class="service-heading">Bee Buffet - Flow Hive Compatable Bee Feeder</h4>
+                    <p class="text-muted">Prototyping 🧪 contact us to get on the experimental list!</p>
                 </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-fire fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Safe Smoker - Electronic Bee Smoker</h4>
+                    <p class="text-muted">Prototyping 🧪 contact us to get on the experimental list!</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-life-ring fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Swarm Haven - Swarm Trap Monitor</h4>
+                    <p class="text-muted">Watch YouTube for upcoming information...Swarm trap monitoring system</p>
+                </div>
+
             </div>
         </div>
     </section>
