--- a/_includes/team.html
+++ b/_includes/team.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Team</h2>
-                    <h3 class="section-subheading text-muted">Meet our amazing team!  TODO will likely change this.</h3>
+                    <h3 class="section-subheading text-muted">Meet our amazing team!</h3>
                 </div>
             </div>
             <div class="row">
@@ -30,7 +30,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">TODO some text here</p>
+                    <p class="large text-muted">Thank you for reading. 🙏</p>
                 </div>
             </div>
         </div>
