Make Bee Club a clickable link

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,8 +13,10 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-calendar-check-o fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Bee Club</h4>
-                    <p class="text-muted">Join a bee community, change our world's nature!</p>
+                    <a href="https://beeclub.io" target="_blank">
+                        <h4 class="service-heading">Bee Club</h4>
+                        <p class="text-muted">Join a bee community, change our world's nature!</p>
+                    </a>
                 </div>
             </div>
         </div>
