--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
     {% include blog.html %}
     {% include about.html %}
     {% include team.html %}
+    {% include vib.html %}
     {% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
