--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,6 +34,9 @@
                         <a class="page-scroll" href="#team">Team</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#vib">VIB</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
