Changing the color scale for vib list again

--- a/_includes/vib.html
+++ b/_includes/vib.html
@@ -5,15 +5,17 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">VIB</h2>
                     <h3 class="section-subheading text-muted">Join our VIB (Very Important Beekeeper) Community!</h3>
-                    <div><p>Become a member of our exclusive Very Important Beekeepers community! </p>Gain early access to:
-                        <ul>
-                            <li>Cutting-edge products</li>
-                            <li>Innovative prototypes</li>
-                            <li>The latest beekeeping insights</li>
-                        </ul>
-                    <p>Join us in making beekeeping more accessible, innovative, and fun for everyone! 🚀</p>
-                    </div>
 
+                    <div class="container mt-4">
+                        <p>Become a member of our exclusive Very Important Beekeepers community!</p>
+                        <p>Gain early access to:</p>
+                        <ul class="list-group">
+                            <li class="list-group-item">Cutting-edge products</li>
+                            <li class="list-group-item">Innovative prototypes</li>
+                            <li class="list-group-item">The latest beekeeping insights</li>
+                        </ul>
+                        <p class="mt-4">Join us in making beekeeping more accessible, innovative, and fun for everyone! 🚀</p>
+                    </div>
 
                     <style>@import url(https://fonts.bunny.net/css?family=ibm-plex-sans:400,600);</style>
 <style>
