Move location of vib to be closer to about and about to link to vib

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -27,13 +27,20 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
-                            </div>
-                        </li>
+
+                        
+                        <a href="https://technicallybeekeeping.com/#vib" target="_blank" class="text-decoration-none">
+                            <li class="timeline-inverted">
+                                <div class="timeline-image">
+                                    <h4>Be Part
+                                        <br>Of Our
+                                        <br>Story!
+                                    </h4>
+                                </div>
+                            </li>
+                        </a>
+
+
                     </ul>
                 </div>
             </div>
