--- a/_includes/vib.html
+++ b/_includes/vib.html
@@ -7,15 +7,15 @@
                     <h3 class="section-subheading text-muted">Join our VIB (Very Important Beekeeper) Community!</h3>
 
                     <div class="container mt-4">
-                        <p>Become a member of our exclusive Very Important Beekeepers community!</p>
-                        <p>Gain early access to:</p>
-                        <ul class="list-group">
-                            <li class="list-group-item">Cutting-edge products</li>
-                            <li class="list-group-item">Innovative prototypes</li>
-                            <li class="list-group-item">The latest beekeeping insights</li>
+                        <p class="mt-4">Become a member of our exclusive Very Important Beekeepers community!</p>
+                        <p class="mt-4">Gain early access to:</p>
+                        <ul class="list-unstyled ps-3">
+                            <li>&#8226; <a href="https://technicallybeekeeping.com/#products" target="_blank">Cutting-edge products</a></li>
+                            <li>&#8226; <a href="https://technicallybeekeeping.com/#services" target="_blank">Innovative services</a></li>
+                            <li>&#8226; <a href="https://youtube.com/@technicallybeekeeping" target="_blank">The latest beekeeping insights</a></li>
                         </ul>
                         <p class="mt-4">Join us in making beekeeping more accessible, innovative, and fun for everyone! 🚀</p>
-                    </div>
+                    </div>                    
 
                     <style>@import url(https://fonts.bunny.net/css?family=ibm-plex-sans:400,600);</style>
 <style>
