Fix about bubble

--- a/_includes/products.html
+++ b/_includes/products.html
@@ -15,7 +15,7 @@
                         <i class="fa fa-spoon fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Jar Bee Feeder</h4>
-                    <p class="text-muted">Coming soon...Patent Pending 📃</p>
+                    <p class="text-muted">Coming soon...Patent Pending</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -31,7 +31,7 @@
                         <i class="fa fa-fire fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Safe Smoker - Electronic Bee Smoker</h4>
-                    <p class="text-muted">Prototyping 🧪 contact us to get on the experimental list!</p>
+                    <p class="text-muted">Prototyping 🧪 ... Patent Pending</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
