--- a/_includes/vib.html
+++ b/_includes/vib.html
@@ -4,10 +4,9 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">VIB</h2>
-                    <h3 class="section-subheading text-muted">Join our VIB (Very Important Beekeeper) Community!</h3>
 
                     <div class="container mt-4">
-                        <p class="mt-4">Become a member of our exclusive Very Important Beekeepers community!</p>
+                        <h3 class="section-subheading text-muted">Join our exclusive VIB (Very Important Beekeeper) Club!</h3>
                         <p class="mt-4">Gain early access to:</p>
                         <ul class="list-unstyled ps-3">
                             <li>&#8226; <a href="https://technicallybeekeeping.com/#products" target="_blank">Cutting-edge products</a></li>
