--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,30 +14,82 @@
                 <div class="col-lg-12">
                     <ul class="timeline">
                         <li>
+
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>1980s-1990s</h4>
+                                    <h4>1980s</h4>
                                     <h4 class="subheading">Our Humble Beginnings</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">I started out beekeeping my mother and father in the early 1980s.</p>
                                 </div>
                             </div>
-                        </li>
+
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>1980s</h4>
+                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">I started out beekeeping my mother and father in the early 1980s.</p>
+                                </div>
+                            </div>
+
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>1990s</h4>
+                                    <h4 class="subheading">Lot's of Great Memories of Beekeeping</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Great Childhood Experience until a Bear took out our Hives.</p>
+                                </div>
+                            </div>
+
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2020s</h4>
+                                    <h4 class="subheading">The Family Reboots Beekeeping</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">My neices and nephews reestablish our Kentucky hives.</p>
+                                </div>
+                            </div>
+
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2023s</h4>
+                                    <h4 class="subheading">Technically Beekeeping is Established</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">We've been working on this for a while and decided to take the leap.</p>
+                                </div>
+                            </div>
+
                             <li class="timeline-inverted">
                                 <div class="timeline-image">
                                     <a href="https://technicallybeekeeping.com/#vib" target="_blank" class="text-decoration-none">
-                                        <h4>Be Part
+                                        <h4 class="text-white">Be Part
                                             <br>Of Our
                                             <br>Story!
                                         </h4>
                                     </a>
                                 </div>
                             </li>
-
 
                     </ul>
                 </div>
