--- a/_includes/vib.html
+++ b/_includes/vib.html
@@ -6,7 +6,7 @@
                     <h2 class="section-heading">VIB</h2>
 
                     <div class="container mt-4">
-                        <h3 class="section-subheading text-muted">Join our exclusive VIB (Very Important Beekeeper) Club!</h3>
+                        <p class="text-muted">Join our exclusive VIB (Very Important Beekeeper) Club!</p>
                         <p class="mt-4">Gain early access to:</p>
                         <ul class="list-unstyled ps-3">
                             <li>&#8226; <a href="https://technicallybeekeeping.com/#products" target="_blank">Cutting-edge products</a></li>
