Fix about images

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -27,21 +27,6 @@
                                 </div>
                             </div>
                             </li>
-
-                            <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>1980s</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">I started out beekeeping my mother and father in the early 1980s.</p>
-                                </div>
-                            </div>
-                        </li>
                         <li>
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
@@ -66,7 +51,7 @@
                                     <h4 class="subheading">The Family Reboots Beekeeping</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">My neices and nephews reestablish our Kentucky hives.</p>
+                                    <p class="text-muted">We reestablish our Kentucky Hives.</p>
                                 </div>
                             </div>
                         </li>
@@ -76,8 +61,8 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2023s</h4>
-                                    <h4 class="subheading">Technically Beekeeping is Established</h4>
+                                    <h4>2023</h4>
+                                    <h4 class="subheading">Technically Beekeeping Est.</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">We've been working on this for a while and decided to take the leap.</p>
@@ -86,7 +71,7 @@
                         </li>
                             <li class="timeline-inverted">
                                 <div class="timeline-image">
-                                    <a href="https://technicallybeekeeping.com/#vib" target="_blank" class="text-decoration-none">
+                                    <a href="https://technicallybeekeeping.com/#vib" target="_blank">
                                         <h4 class="text-white">Be Part
                                             <br>Of Our
                                             <br>Story!
