--- a/_includes/about.html
+++ b/_includes/about.html
@@ -37,7 +37,7 @@
                                     <h4 class="subheading">Lot's of Great Memories of Beekeeping</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Great Childhood Experience until a Bear took out our Hives.</p>
+                                    <p class="text-muted">Great Childhood Experience until a Bear destroyed Hives.</p>
                                 </div>
                             </div>
                         </li>
@@ -65,7 +65,7 @@
                                     <h4 class="subheading">Technically Beekeeping Est.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">We've been working on this for a while and decided to take the leap.</p>
+                                    <p class="text-muted">We've been working on this for a while and decided to finally take the leap.</p>
                                 </div>
                             </div>
                         </li>
