--- a/_includes/about.html
+++ b/_includes/about.html
@@ -69,17 +69,17 @@
                                 </div>
                             </div>
                         </li>
-                            <li class="timeline-inverted">
-                                <div class="timeline-image">
-                                    <a href="https://technicallybeekeeping.com/#vib" target="_blank">
-                                        <h4 class="text-white">Be Part
-                                            <br>Of Our
-                                            <br>Story!
-                                        </h4>
-                                    </a>
-                                </div>
-                            </li>
-
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <a href="https://technicallybeekeeping.com/#vib" target="_blank" class="text-decoration-none">
+                                    <h4 class="text-white" style="color: white;">Be Part
+                                        <br>Of Our
+                                        <br>Story!
+                                    </h4>
+                                </a>
+                            </div>
+                        </li>
+                        
                     </ul>
                 </div>
             </div>
