--- a/_includes/vib.html
+++ b/_includes/vib.html
@@ -9,8 +9,8 @@
                         <p class="text-muted">Join our exclusive VIB (Very Important Beekeeper) Club!</p>
                         <p class="mt-4">Gain early access to:</p>
                         <ul class="list-unstyled ps-3">
-                            <li>&#8226; <a href="https://technicallybeekeeping.com/#products" target="_blank">Cutting-edge products</a></li>
-                            <li>&#8226; <a href="https://technicallybeekeeping.com/#services" target="_blank">Innovative services</a></li>
+                            <li>&#8226; <a href="https://technicallybeekeeping.com/#products">Cutting-edge products</a></li>
+                            <li>&#8226; <a href="https://technicallybeekeeping.com/#services">Innovative services</a></li>
                             <li>&#8226; <a href="https://youtube.com/@technicallybeekeeping" target="_blank">The latest beekeeping insights</a></li>
                         </ul>
                         <p class="mt-4">Join us in making beekeeping more accessible, innovative, and fun for everyone! 🚀</p>
