Fix verbiage in about

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -61,8 +61,8 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2023</h4>
-                                    <h4 class="subheading">Technically Beekeeping Est.</h4>
+                                    <h4>2024</h4>
+                                    <h4 class="subheading">Launch of Technically Beeekeeping</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">We've been working on this for a while and decided to finally take the leap.</p>
@@ -71,7 +71,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <a href="https://technicallybeekeeping.com/#vib" target="_blank" class="text-decoration-none">
+                                <a href="https://technicallybeekeeping.com/#vib" class="text-decoration-none">
                                     <h4 class="text-white" style="color: white;">Be Part
                                         <br>Of Our
                                         <br>Story!
