Fix verbiage again

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -23,7 +23,7 @@
                                     <h4 class="subheading">Our Humble Beginnings</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I started out beekeeping my mother and father in the early 1980s.</p>
+                                    <p class="text-muted">I started out beekeeping with my mom and dad in the early 1980s.</p>
                                 </div>
                             </div>
                             </li>
