--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,9 +14,8 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
-                        </li>
-                        <li><a href="#">Terms of Use</a>
+                        <li>
+                            <p class="large text-muted">Thank you for reading. 🙏</p>
                         </li>
                     </ul>
                 </div>
