Change basic verbiage

--- a/_includes/vib.html
+++ b/_includes/vib.html
@@ -6,14 +6,14 @@
                     <h2 class="section-heading">VIB</h2>
 
                     <div class="container mt-4">
-                        <p class="text-muted">Join our exclusive VIB (Very Important Beekeeper) Club!</p>
+                        <p class="text-muted">Join our exclusive Very Important Beekeeper Club! 🤝</p>
                         <p class="mt-4">Gain early access to:</p>
                         <ul class="list-unstyled ps-3">
                             <li>&#8226; <a href="https://technicallybeekeeping.com/#products">Cutting-edge products</a></li>
                             <li>&#8226; <a href="https://technicallybeekeeping.com/#services">Innovative services</a></li>
                             <li>&#8226; <a href="https://youtube.com/@technicallybeekeeping" target="_blank">The latest beekeeping insights</a></li>
                         </ul>
-                        <p class="mt-4">Join us in making beekeeping more accessible, innovative, and fun for everyone! 🚀</p>
+                        <p class="mt-4">Let's make beekeeping more accessible, innovative, and fun for everyone! 🚀</p>
                     </div>                    
 
                     <style>@import url(https://fonts.bunny.net/css?family=ibm-plex-sans:400,600);</style>
