Remove bee buffet because of other product, change form to link and link to youtube videos

--- a/_includes/products.html
+++ b/_includes/products.html
@@ -15,14 +15,15 @@
                         <i class="fa fa-spoon fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Jar Bee Feeder</h4>
-                    <p class="text-muted">Coming soon...Patent Pending</p>
+                    <p class="text-muted"><a href="https://youtu.be/DG6qCLR55SA" target="_blank">Coming soon...Patent Pending</a>
+                    </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-cutlery fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Bee Buffet - Flow Hive Compatable Bee Feeder</h4>
+                    <h4 class="service-heading">Flow Hive Compatable Bee Feeder</h4>
                     <p class="text-muted">Prototyping 🧪 contact us to get on the experimental list!</p>
                 </div>
                 <div class="col-md-4">
@@ -31,7 +32,7 @@
                         <i class="fa fa-fire fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Safe Smoker - Electronic Bee Smoker</h4>
-                    <p class="text-muted">Prototyping 🧪 ... Patent Pending</p>
+                    <p class="text-muted">a href="https://youtu.be/Z4yzM0qAfn8" target="_blank">Prototyping 🧪 ... Patent Pending<</a></p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
