--- a/_includes/products.html
+++ b/_includes/products.html
@@ -32,15 +32,7 @@
                         <i class="fa fa-fire fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Safe Smoker - Electronic Bee Smoker</h4>
-                    <p class="text-muted">a href="https://youtu.be/Z4yzM0qAfn8" target="_blank">Prototyping 🧪 ... Patent Pending<</a></p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-life-ring fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Swarm Haven - Swarm Trap Monitor</h4>
-                    <p class="text-muted">Watch YouTube for upcoming information...Swarm trap monitoring system</p>
+                    <p class="text-muted"><a href="https://youtu.be/Z4yzM0qAfn8" target="_blank">Prototyping 🧪 ... Patent Pending<</a></p>
                 </div>
 
             </div>
