Fix spelling mistake

--- a/_includes/products.html
+++ b/_includes/products.html
@@ -23,7 +23,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-cutlery fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Flow Hive Compatable Bee Feeder</h4>
+                    <h4 class="service-heading">Flow Hive Compatible Bee Feeder</h4>
                     <p class="text-muted">Prototyping 🧪 contact us to get on the experimental list!</p>
                 </div>
                 <div class="col-md-4">
